--- a/views/layout.html
+++ b/views/layout.html
@@ -2,115 +2,44 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>UTF8ify.com</title>
-	 <style>
-		@font-face {  
-		  font-family: sketch;  
-		  src: local("Sketch Block");
-		}
-		@font-face {  
-		  font-family: quicksand;  
-		  src: local("Quicksand");
-		}
-		body {
-			background: #333;
-		}
-		h1 {
-			font-family: sketch;
-			color: #6374AB;
-			font-size: 4.5em;
-			text-shadow: #fff 1px 0px 1px, #fff 0px 0px 140px;;
-		}
-		#main {
-			margin: 4% 10%;
-			width: 80%;
-		}
-		
-		.button, 
-		textarea {
-			background: #222;
-			border: 1px solid #444;
-			border-radius: 6px;
-			color: #ddd;
-			
-		}
-		.button {
-			margin: 30px 0px;
-			font-size: 1.2em;
-			padding: 10px 15px;
-			background: #000;
-			border:1px solid #6374AB;
-			font-family: tahoma;
-			letter-spacing: 2px;
-			color: #6374AB;
-		}
-        textarea {
-			box-shadow: rgba(220,220,220, 0.1) 0px 0px 80px;
-			padding: 10px;
-			font-size: 1em;
-			font-family: courier;
-            width:100%;
-			height:10em;
-        }
-		a {
-			color: #fff;
-		}
-
-		.about {
-			color: #ddd;
-			font-family: tahoma;
-			font-family: quicksand;
-			
-		}
-		
-		.question {
-			font-family: quicksand;
-			float: top;
-		}
-		
-		#git img {
-			position: absolute; 
-			top: 0;
-			right: 0; 
-			border: 0;
-		}
-
-		</style>
+	<LINK REL=StyleSheet HREF="/public/style.css" TYPE="text/css" MEDIA=screen>
 </head>
 <body>
 	<div role="main" id="main">
 		<h1>utf8ify.com</h1>
 		<form method="post" action="/">
-		    <textarea  name="text">ΑβξφŒ</textarea>
-		    <input type="submit" value="uft8ify" class="button" /> 
+
+		    <textarea  name="text">
+ΑβξφŒ - look at those dodgy characters.
+
+
+
+Click the utf8ify button below.
+</textarea>
+
+ 		<input type="submit" value="uft8ify" class="button" /> 
 		</form>
-		<div class="question">
-			<a href="#">What the feck?</a>
-		</div>
 			<p class="about">
-				This site makes text safe for use in HTML documents.
+				This site makes text safe for use in HTML documents.  
 			</p>
-			<p class="about">
-				This site removes any non-utf8 charactors and replaces any entity symbols with the correct entity encoding. 
-				Enter your text and click utf8ify.
-			</p>
-			<p class="about">
-				This site was built by <a href="http://simonmcmanus.com">Simon McManus</a> using <a href="nodejs.org">Node.js</a>.
-			</p>
+			
 	</div>
+	<a href="https://github.com/simonmcmanus/utf8ify" id="git"><img  src="https://a248.e.akamai.net/assets.github.com/img/7afbc8b248c68eb468279e8c17986ad46549fb71/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub"></a>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script src="/utf8ify.js" type="text/javascript"></script>
-	<script>
-		$(document).ready(function() {
-			var $textarea = $('textarea');
-			$textarea.focus();
-			$('input[type="submit"]').click(function(e) {
-				e.preventDefault();
-				$textarea.val(utf8ify.parse($textarea.val()));
-			});
-		});
+	<script src="/public/interactions.js" type="text/javascript"></script>
+	<script type="text/javascript">
+	  var _gauges = _gauges || [];
+	  (function() {
+	    var t   = document.createElement('script');
+	    t.type  = 'text/javascript';
+	    t.async = true;
+	    t.id    = 'gauges-tracker';
+	    t.setAttribute('data-site-id', '4f646eeef5a1f56acb00004b');
+	    t.src = '//secure.gaug.es/track.js';
+	    var s = document.getElementsByTagName('script')[0];
+	    s.parentNode.insertBefore(t, s);
+	  })();
 	</script>
-	
-
-	<a href="http://github.com/you" id="git"><img  src="https://a248.e.akamai.net/assets.github.com/img/7afbc8b248c68eb468279e8c17986ad46549fb71/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub"></a>
 </body>
 </html>
