using get with no js

--- a/views/layout.html
+++ b/views/layout.html
@@ -7,7 +7,7 @@
 <body>
 	<div role="main" id="main">
 		<h1>utf8ify.com</h1>
-		<form method="post" action="/">
+		<form method="GET" action="/">
 
 		    <textarea  name="text">
 ΑβξφŒ - look at those dodgy characters.
