--- a/views/layout.html
+++ b/views/layout.html
@@ -35,6 +35,19 @@ Click the utf8ify button below.
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script src="/public/utf8ify.js" type="text/javascript"></script>
 	<script src="/public/interactions.js" type="text/javascript"></script>
+	<script type="text/javascript">
+    var GoSquared={};
+    GoSquared.acct = "GSN-775038-N";
+    (function(w){
+        function gs(){
+            w._gstc_lt=+(new Date); var d=document;
+            var g = d.createElement("script"); g.type = "text/javascript"; g.async = true; g.src = "//d1l6p2sc9645hc.cloudfront.net/tracker.js";
+            var s = d.getElementsByTagName("script")[0]; s.parentNode.insertBefore(g, s);
+        }
+        w.addEventListener?w.addEventListener("load",gs,false):w.attachEvent("onload",gs);
+    })(window);
+	</script>
+          
 
 </body>
 </html>
