--- a/views/layout.html
+++ b/views/layout.html
@@ -8,12 +8,14 @@
 	<div role="main" id="main">
 		<h1>utf8ify.com</h1>
 		<form method="POST" action="/">
-		    <textarea  name="text">
+		    <textarea  name="text" tabindex="0">
 ΑβξφŒ - look at those dodgy characters.
 
 
 
 Click the utf8ify button below.
+
+φOw
 </textarea>
 
  		<input type="submit" value="uft8ify" class="button" /> 
